--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ TOBEY_PROGRESS_DSN=http://progress:8080
 TOBEY_RABBITMQ_DSN=amqp://guest:guest@rabbitmq:5672/
 TOBEY_REDIS_DSN=redis:6379/0
 
+# TOBEY_REQS_PER_S=2
+
 # A space separated list of telemetry to send. Available telemetry: metrics,
 # traces. To disable telemetry provide an empty value. When enabling telemetry
 # appropriate OTLP endpoints must provided as well.
