--- a/hosting/scaffold/template/secrets/app-secrets.yml
+++ b/hosting/scaffold/template/secrets/app-secrets.yml
@@ -13,6 +13,6 @@ stringData:
   TOBEY_REDIS_DSN: "redis:6379/0"
   TOBEY_PROGRESS_DSN: "http://progress"
   OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://jaeger:4318/v1/traces"
-  LOG_LEVEL: "TRACE"
+  LOG_LEVEL: "ERROR"
   TOBEY_ENABLE_TRACING: "true"
-  TOBEY_DEBUG: "true"
+  TOBEY_DEBUG: "false"
