Tobey: Increase throughput
- Bring in pulse tool to monitor high frequency metrics
- Move all queuing into Redis, loose dependency on RabbitMQ
- Add retrying HTTP client
- Move sitemap and robots handling out of collector, remove flags.
- Have per host adaptive rate limiting.
- Add support for prometheus metrics.

--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,12 @@
 # TOBEY_SKIP_CACHE=false
 
 TOBEY_PROGRESS_DSN=http://progress:8080
-TOBEY_RABBITMQ_DSN=amqp://guest:guest@rabbitmq:5672/
 TOBEY_REDIS_DSN=redis:6379/0
 
-# TOBEY_REQS_PER_S=2
-
 # A space separated list of telemetry to send. Available telemetry: metrics,
-# traces. To disable telemetry provide an empty value. When enabling telemetry
+# traces, pulse. To disable telemetry provide an empty value. When enabling telemetry
 # appropriate OTLP endpoints must provided as well.
 TOBEY_TELEMETRY="traces"
+
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://jaeger:4318/v1/traces
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=
