Allow to run only with dynamic config

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # TOBEY_SKIP_CACHE=false
 
 TOBEY_PROGRESS_DSN=http://progress:8080
+TOBEY_RESULTS_DSN=webhook://?enable_dynamic_config
 TOBEY_REDIS_DSN=redis:6379/0
 
 # A space separated list of telemetry to send. Available telemetry: metrics,
