--- a/.env.example.factorial
+++ b/.env.example.factorial
@@ -1,14 +1,14 @@
 # TOBEY_DEBUG=false
 # TOBEY_SKIP_CACHE=false
 
-TOBEY_RESULTS_DSN=disk://results
-# TOBEY_PROGRESS_DSN=
-# TOBEY_REDIS_DSN=
+TOBEY_PROGRESS_DSN=factorial://progress:8080
+TOBEY_RESULTS_DSN=webhook://?enable_dynamic_config
+TOBEY_REDIS_DSN=redis:6379/0
 
 # A space separated list of telemetry to send. Available telemetry: metrics,
 # traces, pulse. To disable telemetry provide an empty value. When enabling telemetry
 # appropriate OTLP endpoints must provided as well.
-# TOBEY_TELEMETRY=
+TOBEY_TELEMETRY="traces"
 
-# OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=
-# OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://jaeger:4318/v1/traces
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=
