Work on .env.example

--- a/.env.example.factorial
+++ b/.env.example.factorial
@@ -1,14 +1,26 @@
-# TOBEY_DEBUG=false
-# TOBEY_SKIP_CACHE=false
+# Controls debug mode, uncomment to enable debug mode, by default it is disabled.
+# TOBEY_DEBUG=true 
 
-TOBEY_PROGRESS_DSN=factorial://progress:8080
+# Controls caching access, uncomment to disabled caching. By default caching is enabled.
+# TOBEY_SKIP_CACHE=true
+
+# DSN specifying where crawl results should be stored, by default no results are stored. Here we store results 
+# in the "results" directory, relative to the current working directory.
+# TOBEY_RESULTS_DSN=disk://results 
 TOBEY_RESULTS_DSN=webhook://?enable_dynamic_config
+
+# DSN for progress reporting. By default no progress is reported, uncomment to report progress to the 
+# Factorial service.
+TOBEY_PROGRESS_DSN=factorial://localhost:8080 
+
+# If you have multiple instances of Tobey, you can use a Redis instance to coordinate the work queue. By default
+# no coordination is done, uncomment to enable coordination.
 TOBEY_REDIS_DSN=redis:6379/0
 
-# A space separated list of telemetry to send. Available telemetry: metrics,
-# traces, pulse. To disable telemetry provide an empty value. When enabling telemetry
-# appropriate OTLP endpoints must provided as well.
+# A space separated list of telemetry to send. Available telemetry: metrics, traces, pulse. By default no telemetry 
+# is send. Uncomment to enable metrics and traces.
 TOBEY_TELEMETRY="traces"
 
+# In order to send telemetry you need to provide the OTLP endpoints, as well.
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://jaeger:4318/v1/traces
 OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=
