Add console progress reporter

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,10 @@
 TOBEY_RESULTS_DSN=disk://results 
 # TOBEY_RESULTS_DSN=webhook://host/path
 
-# DSN for progress reporting. By default no progress is reported, uncomment to report progress to the 
-# Factorial service.
+# DSN for progress reporting. By default, a console progress reporter is used. Uncomment to report progress to the 
+# Factorial service or disable progress reporting.
 # TOBEY_PROGRESS_DSN=factorial://localhost:8080 
+# TOBEY_PROGRESS_DSN=
 
 # If you have multiple instances of Tobey, you can use a Redis instance to coordinate the work queue. By default
 # no coordination is done, uncomment to enable coordination.
