Add back WORKERS, document, default to progress noop

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 # Controls caching access, uncomment to disabled caching. By default caching is enabled.
 # TOBEY_SKIP_CACHE=true
 
+# Controls the number of workers per instance, by default 5.
+# TOBEY_WORKERS=5
+
 # DSN specifying where crawl results should be stored, by default no results are stored. Here we store results 
 # in the "results" directory, relative to the current working directory.
 TOBEY_RESULTS_DSN=disk://results 
