Allow customization of UA, default to new UA

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@
 # Controls the number of workers per instance, by default 5.
 # TOBEY_WORKERS=5
 
+# Controls the user agent string, by default "Tobey/0".
+# TOBEY_USER_AGENT="Tobey/0"
+
 # DSN specifying where crawl results should be stored, by default no results are stored. Here we store results 
 # in the "results" directory, relative to the current working directory.
 TOBEY_RESULTS_DSN=disk://results 
