--- a/examples/.env.example.factorial
+++ b/examples/.env.example.factorial
@@ -4,6 +4,13 @@
 # Controls caching access, uncomment to disabled caching. By default caching is enabled.
 # TOBEY_SKIP_CACHE=true
 
+# Controls the number of workers per instance, by default 5.
+# TOBEY_WORKERS=5
+
+# The value is set to a backwards compatible one. Some sites allowlist this
+# specific user agent.
+TOBEY_USER_AGENT="WebsiteStandardsBot/1.0"
+
 # DSN specifying where crawl results should be stored, by default no results are stored. Here we store results 
 # in the "results" directory, relative to the current working directory.
 # TOBEY_RESULTS_DSN=disk://results 
