Refactor dynamic configuration, simplify
- Fix deduped reporting

--- a/examples/.env.example.factorial
+++ b/examples/.env.example.factorial
@@ -11,10 +11,13 @@
 # specific user agent.
 TOBEY_USER_AGENT="WebsiteStandardsBot/1.0"
 
+# Enable dynamic re-configuration during run time. By default disabled.
+TOBEY_DYNAMIC_CONFIG=yes
+
 # DSN specifying where crawl results should be stored, by default no results are stored. Here we store results 
 # in the "results" directory, relative to the current working directory.
 # TOBEY_RESULTS_DSN=disk://results 
-TOBEY_RESULTS_DSN=webhook://?enable_dynamic_config
+TOBEY_RESULT_REPORTER_DSN=noop://
 
 # DSN for progress reporting. By default no progress is reported, uncomment to report progress to the 
 # Factorial service.
