--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,13 @@
 # Controls the user agent string, by default "Tobey/0".
 # TOBEY_USER_AGENT="Tobey/0"
 
+# Enable dynamic re-configuration during run time. By default disabled.
+# TOBEY_DYNAMIC_CONFIG=yes
+
 # DSN specifying where crawl results should be stored, by default no results are stored. Here we store results 
 # in the "results" directory, relative to the current working directory.
-TOBEY_RESULTS_DSN=disk://results 
-# TOBEY_RESULTS_DSN=webhook://host/path
+TOBEY_RESULT_REPORTER_DSN=disk://results 
+# TOBEY_RESULT_REPORTER_DSN=webhook://host/path
 
 # DSN for progress reporting. By default, a console progress reporter is used. Uncomment to report progress to the 
 # Factorial service or disable progress reporting.
