Add support for s3 storage

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,12 @@
 # in the "results" directory, relative to the current working directory.
 TOBEY_RESULT_REPORTER_DSN=disk://results 
 # TOBEY_RESULT_REPORTER_DSN=webhook://host/path
+# TOBEY_RESULT_REPORTER_DSN=s3://bucket-name/optional/prefix
+
+# When using S3 storage, configure your AWS credentials:
+# AWS_ACCESS_KEY_ID=your-access-key
+# AWS_SECRET_ACCESS_KEY=your-secret-key
+# AWS_REGION=us-east-1 # Optional, defaults to us-east-1
 
 # DSN for progress reporting. By default, a console progress reporter is used. Uncomment to report progress to the 
 # Factorial service or disable progress reporting.
