--- a/examples/instrumented/compose.yml
+++ b/examples/instrumented/compose.yml
@@ -25,6 +25,7 @@ services:
       - TOBEY_RESULT_REPORTER_DSN=disk:///tmp/tobey
     volumes:
       - tobey-cache:/cache
+      - /tmp/tobey:/tmp/tobey
 
   prometheus:
     image: prom/prometheus
