--- a/examples/simple/compose.yml
+++ b/examples/simple/compose.yml
@@ -13,6 +13,7 @@ services:
       - TOBEY_RESULT_REPORTER_DSN=disk:///tmp/tobey
     volumes:
       - tobey-cache:/cache
+      - /tmp/tobey:/tmp/tobey
 
 volumes:
   tobey-cache:
